[gd_scene load_steps=3 format=3 uid="uid://cqh2p7oifpcnh"]

[ext_resource type="Script" path="res://Guis/in_game_menu.gd" id="1_h1pk3"]
[ext_resource type="PackedScene" uid="uid://sa1g2gcdoqxf" path="res://Guis/multiplayer.tscn" id="2_nv4qm"]

[node name="In Game Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1pk3")

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -15.5
offset_right = 46.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit Game"

[node name="Return to game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -93.5
offset_right = 64.5
offset_bottom = -62.5
grow_horizontal = 2
grow_vertical = 2
text = "Return to game"

[node name="Leave_game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -55.5
offset_right = 51.5
offset_bottom = -24.5
grow_horizontal = 2
grow_vertical = 2
text = "Leave Game
"

[node name="Multiplayer" parent="." instance=ExtResource("2_nv4qm")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Return to game" to="." method="_on_return_to_game_pressed"]
[connection signal="pressed" from="Leave_game" to="." method="_on_leave_game_pressed"]
